# CircleImageNativeApp

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/circleimagenativeapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  my_circle-lib.cpp  native-lib.cpp
app/src/main/java/com/example/circleimagenativeapp/: MainActivity.kt
app/src/main/res/drawable/: bg_image_1.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/circleimagenativeapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
